// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders 1`] = `
<button
  className="sc-fUOEQR jISkIi"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-edBHQG nogoC"
  />
</button>
`;

exports[`Dialog renders Another Dialog Header 1`] = `
<button
  className="sc-fUOEQR jISkIi"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-edBHQG nogoC"
  />
</button>
`;

exports[`Dialog renders Dialog Header 1`] = `
<button
  className="sc-fUOEQR jISkIi"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-edBHQG nogoC"
  />
</button>
`;

exports[`Dialog renders RTL 1`] = `
<div
  dir="rtl"
>
  <button
    className="sc-fUOEQR jISkIi"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="medium"
  >
    Open Dialog
    <div
      className="sc-edBHQG nogoC"
    />
  </button>
</div>
`;

exports[`Dialog renders with No Background 1`] = `
<button
  className="sc-fUOEQR jISkIi"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-edBHQG nogoC"
  />
</button>
`;

exports[`Dialog renders with No Close 1`] = `
<button
  className="sc-fUOEQR jISkIi"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-edBHQG nogoC"
  />
</button>
`;
